# leader_follower_task

./: .gitignore  .gitman.yml  CMakeLists.txt  README.md  package.xml
.ci/: install.sh
.github/workflows/: melodic.yml  noetic.yml
cfg/: Follower.cfg
config/: follower.yaml  leader.yaml
config/config/: follower.yaml
include/leader_follower_task/: follower.h  message_utils.h  velocity_estimator.h
include/leader_follower_task_tutorial/: follower.h
launch/: rviz.launch  supervisor.launch  uvdar_dual_cameras.launch  uvdar_kalman.launch
ros_packages/: mrs_serial  mrs_utils  summer_school_supervisor  trajectory_loader  uvdar_core  uvdar_gazebo_plugin  uvdar_leader_follower
rviz/: default.rviz
scripts/: circle_trajectory.py  generate_trajectory.py
src/: follower.cpp  message_utils.cpp  supervisor.cpp  velocity_estimator.cpp
tmux_scripts/simulation_two_drones/: layout.json  pos1.yaml  pos2.yaml  session.yml  start.sh
tmux_scripts/simulation_two_drones/config/: custom_config.yaml  tf_connector.yaml  trajectory_loader.yaml
trajectories/: follower.txt  leader_0.5ms.txt  leader_1.0ms.txt  leader_1.5ms.txt  leader_2.0ms.txt  leader_3.0ms.txt  leader_circle.txt
