<?xml version="1.0"?>
<package format="2">

  <name>leader_follower_task_tutorial</name>
  <version>1.6.0</version>
  <description>TODO</description>
  <maintainer email="stibipet@fel.cvut.cz">Petr Štibinger</maintainer>
  <author>Petr Štibinger</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>cmake_modules</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_runtime</depend>
  <depend>uvdar_core</depend>

</package>
